Return breaking changes in prechecks